fix(XML Bindings): fix in WPS converter for windows system